syntax = "proto3";
package tendermint.spn.campaign;

// this line is used by starport scaffolding # genesis/proto/import
import "gogoproto/gogo.proto";
import "campaign/mainnet_account.proto";

option go_package = "github.com/tendermint/spn/x/campaign/types";

// GenesisState defines the campaign module's genesis state.
message GenesisState {
  // this line is used by starport scaffolding # genesis/proto/state
  repeated MainnetAccount mainnetAccountList = 1 [(gogoproto.nullable) = false]; // this line is used by starport scaffolding # genesis/proto/stateField
}
