syntax = "proto3";
package tendermint.spn.monitoringc;

option go_package = "github.com/tendermint/spn/x/monitoringc/types";

message VerifiedClientID {
  uint64          launchID  = 1;
  repeated string clientIDs = 2;
}
