syntax = "proto3";
package tendermint.spn.profile;

option go_package = "github.com/tendermint/spn/x/profile/types";

import "gogoproto/gogo.proto";

message Coordinator {
  uint64                 coordinatorID = 1;
  string                 address       = 2;
  CoordinatorDescription description   = 3 [(gogoproto.nullable) = false];
  bool                   active        = 4;
}

message CoordinatorDescription {
  string identity = 1;
  string website  = 2;
  string details  = 3;
}

message CoordinatorByAddress {
  string address       = 1;
  uint64 coordinatorID = 2;
}
